--- a/src/app/navigation/dashboard/dbNavigation.html
+++ b/src/app/navigation/dashboard/dbNavigation.html
@@ -116,9 +116,9 @@
                             </li>
 
 
-                            <li class="nav-item nav-header">
-                                <span class=""><span class="nav-header-text">Sent</span></span>
-                            </li>
+                            <!--<li class="nav-item nav-header">-->
+                                <!--<span class=""><span class="nav-header-text">Sent</span></span>-->
+                            <!--</li>-->
                             <li ng-class="{ active: isActive('/app/pending')}" class="nav-item" >
                                 <a ui-sref="messages.sent" class="nav-link ">
                                     <div class="row">
@@ -183,22 +183,22 @@
                                     </div>
                                 </a>
                             </li>
-                            <li ng-class="{ active: isActive('/app/accept')}" class="nav-item " >
-                                <a ui-sref="app.accept" class="nav-link ">
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <div class="row">
-                                                <div class="col-md-10 col-sm-10 col-xs-10">
-                                                    <span class="title important-options">Ignored members</span>
-                                                </div>
-                                                <!--<div class="col-md-1 col-sm-1 col-xs-1">
-                                                    <span class="">0</span>
-                                                </div>-->
-                                            </div>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
+                            <!--<li ng-class="{ active: isActive('/app/accept')}" class="nav-item " >-->
+                                <!--<a ui-sref="app.accept" class="nav-link ">-->
+                                    <!--<div class="row">-->
+                                        <!--<div class="col-md-12">-->
+                                            <!--<div class="row">-->
+                                                <!--<div class="col-md-10 col-sm-10 col-xs-10">-->
+                                                    <!--<span class="title important-options">Ignored members</span>-->
+                                                <!--</div>-->
+                                                <!--&lt;!&ndash;<div class="col-md-1 col-sm-1 col-xs-1">-->
+                                                    <!--<span class="">0</span>-->
+                                                <!--</div>&ndash;&gt;-->
+                                            <!--</div>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                <!--</a>-->
+                            <!--</li>-->
                             <li ng-class="{ active: isActive('/app/decline')}" class="nav-item" >
                                 <a ui-sref="app.decline" class="nav-link ">
                                     <div class="row">
