--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -32,9 +32,11 @@
 
                                     <select class="form-control input-rounded " ng-model="regular.age_start">
                                         <option  value="">Select</option>
+                                        <span ng-if="profile.login_user.gender == 'male'">
                                         <option  value="18">18</option>
                                         <option  value="19">19</option>
                                         <option  value="20">20</option>
+                                            </span>
                                         <option  value="21">21</option>
                                         <option  value="22">22</option>
                                         <option  value="23">23</option>
@@ -93,9 +95,11 @@
 
                                     <select placeholder="select" class="form-control input-rounded " ng-model="regular.age_end">
                                         <option  value="">Select</option>
+                                         <span ng-if="profile.login_user.gender == 'male'">
                                         <option  value="18">18</option>
                                         <option  value="19">19</option>
                                         <option  value="20">20</option>
+                                            </span>
                                         <option  value="21">21</option>
                                         <option  value="22">22</option>
                                         <option  value="23">23</option>
@@ -156,8 +160,23 @@
 
                                     <select class="form-control input-rounded " ng-model="regular.height_start">
                                         <option  value="">Select</option>
-                                        <option  value="137">137 cms
-                                        </option>
+                                        <option  value="121">121 cms</option>
+                                        <option  value="122">122 cms</option>
+                                        <option  value="123">123 cms</option>
+                                        <option  value="124">124 cms</option>
+                                        <option  value="125">125 cms</option>
+                                        <option  value="126">126 cms</option>
+                                        <option  value="127">127 cms</option>
+                                        <option  value="128">128 cms</option>
+                                        <option  value="129">129 cms</option>
+                                        <option  value="130">130 cms</option>
+                                        <option  value="131">131 cms</option>
+                                        <option  value="132">132 cms</option>
+                                        <option  value="133">133 cms</option>
+                                        <option  value="134">134 cms</option>
+                                        <option  value="135">135 cms</option>
+                                        <option  value="136">136 cms</option>
+                                        <option  value="137">137 cms</option>
                                         <option  value="138">138 cms
                                         </option>
                                         <option  value="139">139 cms
@@ -290,7 +309,9 @@
                                         <option  value="208">208 cms</option>
                                         <option  value="209">209 cms</option>
                                         <option  value="210">210 cms</option>
-
+                                        <option  value="211">211 cms</option>
+                                        <option  value="212">212 cms</option>
+                                        <option  value="213">213 cms</option>
 
 
                                     </select>
@@ -300,8 +321,25 @@
                                     <label class=" uppercase font-weight "> &nbsp;</label>
 
                                     <select class="form-control input-rounded " ng-model="regular.height_end">
-                                        <option  value="137">137 cms
-                                        </option>
+                                        <option  value="">Select</option>
+
+                                        <option  value="121">121 cms</option>
+                                        <option  value="122">122 cms</option>
+                                        <option  value="123">123 cms</option>
+                                        <option  value="124">124 cms</option>
+                                        <option  value="125">125 cms</option>
+                                        <option  value="126">126 cms</option>
+                                        <option  value="127">127 cms</option>
+                                        <option  value="128">128 cms</option>
+                                        <option  value="129">129 cms</option>
+                                        <option  value="130">130 cms</option>
+                                        <option  value="131">131 cms</option>
+                                        <option  value="132">132 cms</option>
+                                        <option  value="133">133 cms</option>
+                                        <option  value="134">134 cms</option>
+                                        <option  value="135">135 cms</option>
+                                        <option  value="136">136 cms</option>
+                                        <option  value="137">137 cms</option>
                                         <option  value="138">138 cms
                                         </option>
                                         <option  value="139">139 cms
@@ -434,6 +472,9 @@
                                         <option  value="208">208 cms</option>
                                         <option  value="209">209 cms</option>
                                         <option  value="210">210 cms</option>
+                                        <option  value="211">211 cms</option>
+                                        <option  value="212">212 cms</option>
+                                        <option  value="213">213 cms</option>
 
 
 
