--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -25,7 +25,34 @@
                         <li><a ui-sref="search">SEARCH</a></li>
                         <li><a ui-sref="recomendation">DAILY MATCHES</a></li>
                         <li><a ui-sref="messages">MESSAGES</a></li>
-                        <li><a >HELP</a></li>
+                        <!--<li><a >HELP</a></li>-->
+                        <li class="top-menu dropdown dropdown-user ">
+                            <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"
+                               data-hover="dropdown" data-close-others="true">HELP</a>
+                            <ul class="dropdown-menu ">
+                                <li >
+                                    <a ui-sref="profile" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
+                                        <i class="icon-user"></i> My Help </a>
+                                </li>
+                                <li>
+                                    <a ui-sref="settings" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
+                                        <i class="icon-lock"></i>Customer Care </a>
+                                </li>
+                                <li>
+                                    <a ui-sref="settings" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
+                                        <i class="icon-lock"></i>Contact Us</a>
+                                </li>
+                                <li>
+                                    <a ui-sref="settings" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
+                                        <i class="icon-lock"></i>Feedback</a>
+                                </li>
+                                <li>
+                                    <a ng-click="logout()" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
+                                        <i class="icon-key"></i>Business Enquires</a>
+                                </li>
+                            </ul>
+                        </li>
+
                     </ul>
                 </div>
 
