--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -209,7 +209,7 @@
                     <label class="col-md-4 control-label"></label>
 
                     <div class="col-md-8 text-box-width" style="text-align: center;color: grey">
-                        I agree the <a>Terms</a> and <a>Privacy</a>
+                        I agree the <a ui-sref="terms">Terms and Privacy</a>
                     </div>
                 </div>
             </form>
