--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -253,7 +253,8 @@
                                             <label class=" font-weight-head  "> Drinking Habits</label>
 
                                             <!--<p class="details " ng-if="view.drinking_habit != null &&  view.drinking_habit != ''">{{view.drinking_habit}}</p>-->
-                                            <p class="details " ><a style="color: indianred;" ng-click="requests('drinking','basicRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="!drinkingReq"><a style="color: indianred;" ng-click="requests('drinking','basicRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="drinkingReq" ><span style="color:grey"><i>Request Send</i></span></p>
                                             <!--<p class="details " ng-if="view.drinking_habit == null ||  view.drinking_habit == ''">Not Specified</p>-->
 
                                         </div>
@@ -261,7 +262,8 @@
                                             <label class=" font-weight-head  "> Smoking Habits</label>
 
                                             <!--<p class="details " ng-if="view.smoking_habit != null &&  view.smoking_habit != ''">{{view.smoking_habit}}</p>-->
-                                            <p class="details " ><a style="color: indianred;" ng-click="requests('smoking','basicRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="!smokingReq"><a style="color: indianred;" ng-click="requests('smoking','basicRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="smokingReq"><span style="color:grey"><i>Request Send</i></span></p>
 
                                         </div>
                                     </div>
@@ -333,14 +335,16 @@
                                             <label class="font-weight-head "> Education</label>
                                             <!--<p class="details " ng-if="view.education != null &&  view.education != ''">{{view.education}}</p>-->
                                            <!--<p class="details " ng-if="view.education == null ||  view.education == ''">Not Specified</p>-->
-                                            <p class="details " ><a style="color: indianred;" ng-click="requests('education','professionRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="!educationReq"><a style="color: indianred;" ng-click="requests('education','professionRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="educationReq"><span style="color:grey"><i>Request Send</i></span></p>
 
                                         </div>
 
                                         <div class="col-md-4" style="height:60px">
                                             <label class=" font-weight-head  "> Occupation</label>
                                             <!--<p class="details " ng-if="view.occupation != null &&  view.occupation != ''">{{view.occupation}}</p>-->
-                                            <p class="details " ><a style="color: indianred;" ng-click="requests('occupation','professionRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="!occupationReq"><a style="color: indianred;" ng-click="requests('occupation','professionRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="occupationReq"><span style="color:grey"><i>Request Send</i></span></p>
 
                                             <!--<p class="details " ng-if="view.occupation == null ||  view.occupation == ''">Not Specified</p>-->
                                         </div>
@@ -348,7 +352,8 @@
                                         <div class="col-md-4" style="height:60px">
                                             <label class=" font-weight-head  "> Annual Income</label>
                                             <!--<p class="details " ng-if="view.income != null &&  view.income != ''">{{view.income}}</p>-->
-                                            <p class="details " ><a style="color: indianred;" ng-click="requests('income','professionRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="!incomeReq"><a style="color: indianred;" ng-click="requests('income','professionRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="incomeReq"><span style="color:grey"><i>Request Send</i></span></p>
 
                                             <!--<p class="details " ng-if="view.income == null ||  view.income == ''">Not Specified</p>-->
 
@@ -386,7 +391,8 @@
                                             <label class=" font-weight-head  "> Ancestral Origin</label>
                                             <!--<p class="details " ng-if="view.ancestral_origin != null &&  view.ancestral_origin != ''">{{view.ancestral_origin}}</p>-->
                                             <!--<p class="details " ng-if="view.ancestral_origin == null ||  view.ancestral_origin == ''">Not Specified</p>-->
-                                            <p class="details " ><a style="color: indianred;" ng-click="requests('origin','familyRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="!originReq"><a style="color: indianred;" ng-click="requests('origin','familyRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="originReq"><span style="color:grey"><i>Request Send</i></span></p>
 
 
                                         </div>
@@ -395,7 +401,8 @@
                                             <label class=" font-weight-head  "> Family Type</label>
                                             <!--<p class="details " ng-if="view.family_type != null &&  view.family_type != ''">{{view.family_type}}</p>-->
                                             <!--<p class="details " ng-if="view.family_type == null ||  view.family_type == ''">Not Specified</p>-->
-                                            <p class="details " ><a style="color: indianred;" ng-click="requests('family','familyRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="!familyReq"><a style="color: indianred;" ng-click="requests('family','familyRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="familyReq"><span style="color:grey"><i>Request Send</i></span></p>
 
 
                                         </div>
@@ -415,7 +422,8 @@
                                             <label class=" font-weight-head  "> Family Status</label>
                                             <p class="details " ng-if="view.family_status != null &&  view.family_status != ''">{{view.family_status}}</p>
                                             <!--<p class="details " ng-if="view.family_status == null ||  view.family_status == ''">Not Specified</p>-->
-                                            <p class="details " ><a style="color: indianred;" ng-click="requests('family_status','familyRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="!family_statusReq"><a style="color: indianred;" ng-click="requests('family_status','familyRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="family_statusReq"><span style="color:grey"><i>Request Send</i></span></p>
 
                                         </div>
                                         <div class="col-md-4" style="height:60px">
@@ -448,7 +456,8 @@
                                         <div class="col-md-12">
                                             <!--<p class="details " ng-if="view.about_family != null &&  view.about_family != ''">{{view.about_family}}</p>-->
                                             <!--<p class="details " ng-if="view.about_family == null ||  view.about_family == ''">Not Specified</p>-->
-                                            <p class="details " ><a style="color: indianred;" ng-click="requests('about_family','aboutFamilyRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="!about_familyReq"><a style="color: indianred;" ng-click="requests('about_family','aboutFamilyRequest')">SEND REQUEST</a></p>
+                                            <p class="details " ng-if="about_familyReq"><span style="color:grey"><i>Request Send</i></span></p>
 
                                         </div>
                                     </div>
