--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -51,7 +51,7 @@
                                         <h4 class="heading"> Quick Link</h4>
                                     </div>
                                     <div class="col-md-12">
-                                        <span class="description"> Privacy Policy | Terms of Use | Safety Trips | Site Map </span>
+                                        <span class="description"> Privacy Policy | <a ui-sref="terms">Terms of Use</a> | Safety Trips | Site Map </span>
                                     </div>
                                 </div>
                             </div>
