--- a/src/app/main/managephotos/managephoto.css
+++ b/src/app/main/managephotos/managephoto.css
@@ -37,8 +37,8 @@
     position: absolute;
     top: -3.5px;
     left: -3px;
-    border-top: 4px solid red;
-    border-left: 4px solid red;
+    /*border-top: 4px solid red;*/
+    /*border-left: 4px solid red;*/
 }
 .photo-div:after {
     display: block;
@@ -48,8 +48,8 @@
     position: absolute;
     top: -3.5px;
     right: -3px;
-    border-top: 4px solid red;
-    border-right: 4px solid red;
+    /*border-top: 4px solid red;*/
+    /*border-right: 4px solid red;*/
 }
 .photo-span:before {
     display: block;
@@ -59,8 +59,8 @@
     position: absolute;
     bottom: -3.5px;
     left: -3px;
-    border-bottom: 4px solid red;
-    border-left: 4px solid red;
+    /*border-bottom: 4px solid red;*/
+    /*border-left: 4px solid red;*/
 }
 .photo-span:after {
     display: block;
@@ -70,8 +70,8 @@
     position: absolute;
     bottom: -3.5px;
     right: -3px;
-    border-bottom: 4px solid red;
-    border-right: 4px solid red;
+    /*border-bottom: 4px solid red;*/
+    /*border-right: 4px solid red;*/
 }
 
 .fileUpload {
