--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -79,13 +79,19 @@
                         </div>
 
                     </div>
-                    <div ng-if="viewType == 'managephoto'">
+                    <div ng-if="viewType == 'managephoto'" >
 
-                        <div class="portlet light border-rounded">
+                        <div class="portlet light " style="background-color: gainsboro;margin-bottom:0px">
 
                             <div class="portlet-body form  form-horizontal">
                                 <div class="row" style="text-align: center;font-size: 21px;margin:20px">
-                                    <span class="  bold "> Get more response by uploading up to 20  photos on your profile</span>
+                                    <span class="  bold "> You have added 11 photos. Add more to get better responses</span>
+
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12" style="text-align: center;text-transform: uppercase;font-weight: bold;color: grey">
+                                        Upload Photo From
+                                        </div>
 
                                 </div>
                                 <div class="row">
@@ -104,8 +110,7 @@
                                 </span></div>
                                         </div>
                                     </div>-->
-                                    <div class="col-md-1"></div>
-                                    <div class="col-md-6" style="text-align: center">
+                                    <div class="col-md-12" style="text-align: center">
                                         <div ng-if="uploadmsg != ''" class=" alert-dismissable">
                                             <button  type="button" class="close" data-dismiss="alert"
                                                     aria-hidden="true"></button>
@@ -130,53 +135,59 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="portlet light " style="padding: 30px">
+                            <div class="portlet-title">
+                                <div class="caption uppercase">
+                                   <span style="color: #4cbcac;font-size: 16px;font-weight: bold"> Your Album</span>
+                                </div>
+                            </div>
+                            <div class="portlet-body ">
+
+                            <div class="row" style="padding: 30px">
+                                <div class="col-sm-3" ng-click="group('general')" style="background-color: gainsboro">
+
+
+                                    <div class="thumbnail" style="background-color: gainsboro">
+
+                                        <div style="height: 150px;width: 100%;line-height: 140px;text-align:center">
+                                            <b>General </b>
+                                        </div>
+
+                                    </div>
+                                </div>
+                                <!--<div class="col-sm-3" ng-click="group('family')">-->
+
+
+                                <!--<div class="thumbnail">-->
+
+                                <!--<div style="height: 150px;width: 100%;line-height: 140px;text-align:center">-->
+                                <!--<b>Family & Friends</b>-->
+                                <!--</div>-->
+
+                                <!--&lt;!&ndash;<img ng-src="{{image.image}}" alt="{{image.description}}">&ndash;&gt;-->
+                                <!--</div>-->
+                                <!--</div>-->
+
+                                <!--<div class="col-sm-3" ng-click="group('others')">-->
+
+
+                                <!--<div class="thumbnail">-->
+
+                                <!--<div style="height: 150px;width: 100%;line-height: 140px;text-align:center">-->
+                                <!--<b>Others</b>-->
+                                <!--</div>-->
+
+                                <!--&lt;!&ndash;<img ng-src="{{image.image}}" alt="{{image.description}}">&ndash;&gt;-->
+                                <!--</div>-->
+                                <!--</div>-->
+                            </div>
+                                </div>
+                        </div>
 
                         <!--<input type="file" id="myFile">-->
 
                     </div>
                 </div>
-                <div class="col-md-12" ng-if="viewType == 'managephoto'">
-
-                    <div class="row">
-                        <div class="col-sm-3" ng-click="group('general')">
-
-
-                            <div class="thumbnail">
-
-                                <div style="height: 150px;width: 100%;line-height: 140px;text-align:center">
-                                    <b>General </b>
-                                </div>
-
-                            </div>
-                        </div>
-                        <!--<div class="col-sm-3" ng-click="group('family')">-->
-
-
-                        <!--<div class="thumbnail">-->
-
-                        <!--<div style="height: 150px;width: 100%;line-height: 140px;text-align:center">-->
-                        <!--<b>Family & Friends</b>-->
-                        <!--</div>-->
-
-                        <!--&lt;!&ndash;<img ng-src="{{image.image}}" alt="{{image.description}}">&ndash;&gt;-->
-                        <!--</div>-->
-                        <!--</div>-->
-
-                        <!--<div class="col-sm-3" ng-click="group('others')">-->
-
-
-                        <!--<div class="thumbnail">-->
-
-                        <!--<div style="height: 150px;width: 100%;line-height: 140px;text-align:center">-->
-                        <!--<b>Others</b>-->
-                        <!--</div>-->
-
-                        <!--&lt;!&ndash;<img ng-src="{{image.image}}" alt="{{image.description}}">&ndash;&gt;-->
-                        <!--</div>-->
-                        <!--</div>-->
-                    </div>
-                </div>
-
                 <div class="col-md-12" ng-if="viewType == 'group'">
 
                     <div>
@@ -206,10 +217,10 @@
 
 
                                 <div style="position: relative;">
-                                    <div class="photo-div"><span class="photo-span">
+                                    <div class="photo-div" style="margin-top: 25px;margin-left: 30px;cursor: pointer;"><span class="photo-span">
                                       <div class="upload-btn-wrapper">
                                           <button class="btn"
-                                                  style="width: 140px;height: 140px "><i class="fa fa-plus"></i></button>
+                                                  style="width: 140px;height: 140px;font-weight: bold;background-color: lightgrey"><i class="fa fa-plus"></i><br>Add Photo</button>
                                           <input type="file" id="myFile1"
                                                  onchange="angular.element(this).scope().uploadFile1(this.files)"
                                                  class="upload">
