--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -730,8 +730,7 @@
 
                             <div class="portlet light border-rounded">
                        <div class="alert alert-success">
-                           Invalid User Id
-                       </div>
+                           Sorry, this member's profile does not exist.                       </div>
                            </div>
                            </div>
                            </div>
