--- a/src/app/main/search/searchbyid/searchById.html
+++ b/src/app/main/search/searchbyid/searchById.html
@@ -10,6 +10,8 @@
             <div class="row">
                 <div class="col-md-12 ">
                     <!-- BEGIN SAMPLE FORM PORTLET-->
+                    <div class="alert alert-success" ng-if="message != ''">
+                        Sorry, this member's profile does not exist.                       </div>
                     <div class="portlet light bordered border-rounded">
                         <div class="portlet-title">
                             <div class="caption ">
@@ -69,7 +71,10 @@
                         </div>
                     </div>
                 </div>
-                <div style="color: red;text-align: center">{{message}}</div>
+
+            </div>
+        </div>
+    </div>
 
                 <div class="col-md-12 " ng-if="item != null">
                     <!-- BEGIN SAMPLE FORM PORTLET-->
