--- a/src/app/navigation/search/searchNavigation.html
+++ b/src/app/navigation/search/searchNavigation.html
@@ -1,5 +1,21 @@
 <div class="page-sidebar-wrapper">
-    <div class="page-sidebar navbar-collapse collapse" style="border-radius: 10px">
+    <div class="page-sidebar navbar-collapse collapse" style="border-radius: 10px;
+    margin-top:20px">
+
+        <div class="row border-rounded-top" style="background-color:#f9fafc;height:37px;padding: 9px 14px 9px 9px;margin-top:10px">
+            <div class="col-md-12 bold" style="text-align: center;">Search by ID</div>
+        </div>
+
+        <div class="row border-rounded-bottom" style="background-color:white;padding: 9px 14px 9px 9px;">
+            <div class="input-group">
+                <input type="text" class="form-control input-rounded-pratial-left" placeholder="Enter ID" ng-model="viewId">
+                                                    <span class="input-group-btn">
+                                                        <button class="btn red input-rounded-pratial-right" ng-click="viewById(viewId)" type="button">Go</button>
+                                                    </span>
+            </div>
+
+        </div>
+        <span ng-if="searchList.search.length > 0">
 
         <div class="row border-rounded-top" style="background-color:#f9fafc;height:37px;padding: 9px 14px 9px 9px;margin-top:10px">
             <div class="col-md-12 bold" style="text-align: center;">My Saved Searches</div>
@@ -31,20 +47,7 @@
 
 
         </div>
-
-        <div class="row border-rounded-top" style="background-color:#f9fafc;height:37px;padding: 9px 14px 9px 9px;margin-top:10px">
-            <div class="col-md-12 bold" style="text-align: center;">Search by ID</div>
-        </div>
-
-        <div class="row border-rounded-bottom" style="background-color:white;padding: 9px 14px 9px 9px;">
-            <div class="input-group">
-                <input type="text" class="form-control input-rounded-pratial-left" placeholder="Enter ID" ng-model="viewId">
-                                                    <span class="input-group-btn">
-                                                        <button class="btn red input-rounded-pratial-right" ng-click="viewById(viewId)" type="button">Go</button>
-                                                    </span>
-            </div>
-
-        </div>
+</span>
     </div>
     <!-- END SIDEBAR -->
 </div>
