--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -147,7 +147,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="portlet light " style="background-color: gainsboro;margin-bottom:0px">
+                        <div  ng-if="viewType == 'group'" class="portlet light " style="background-color: gainsboro;margin-bottom:0px">
 
                             <div class="portlet-body form  form-horizontal">
 
